tests/ui/parser/bad-value-ident-true.rs
fn true() { } //~ ERROR expected identifier, found keyword `true`
fn main() { }

// ferrocene-annotations: fls_21vnag69kbwe
// Identifiers
